--- a/style.css
+++ b/style.css
@@ -3,16 +3,22 @@
     font-size: 20px;
     
 }
+body{
+    background-color: #f9f4ef;
+}
 #heading{
     font-size: 25px;
-    color: maroon;
+    /*color: maroon;*/
     align: center;
+    background-color: #020826;
+    display: flex;
 }
 h1,h2{
     text-align: center;
     color: maroon;
     font-size: 30px;
 }
+saipranithoku@gmail.com
 
 img{
     align-items: center;
@@ -21,8 +27,7 @@ img{
 p{
     font-size: 20px;
     color:black;
-    background-color: white;
-    border: 3px solid black
+    background-color: #716040;
     
 }
 div{
